fix: Removing unused classes, replacing ID selectors with Classes, readjusting the HTML layout, readjusting the CSS to remove unused selectors, adding message to images for accessibility

--- a/index.html
+++ b/index.html
@@ -7,130 +7,126 @@
     <title>Mensagens</title>
     <link rel="stylesheet" href="./src/styles/index.css">
 </head>
+
 <body>
 
     <div class="container_global">
-        <header class="header"></header>
         <main class="main">
             <div class="container_main">
 
                 <aside class="aside">
                     <header class="aside-header">
-                        <img decoding="async" src="https://picsum.photos/id/10/50" alt="" class="avatar"
+                        <img decoding="async" src="https://picsum.photos/id/10/50" alt="Imagem de Pefil" class="avatar"
                             id="profile-image">
                         <div class="toolbar">
                             <img src="./src/assets/do-utilizador.png" alt="">
                             <img src="./src/assets/comentario-alt.png" alt="">
-                            <img src="./src/assets/definicoes.png" style="width: 16px;" alt="">
+                            <img src="./src/assets/definicoes.png" style="width: 18px;" alt="Imagem de Pefil">
                         </div>
                     </header>
 
                     <section class="sidebar-content">
                         <div class="chats-list">
                             <div class="chat-tile">
-                                <img decoding="async" src="https://picsum.photos/id/103/50" alt=""
-                                    class="chat-tile-avatar">
+                                <img decoding="async" src="https://picsum.photos/id/103/50" alt="Imagem de Pefil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
-                                        <span>Backup</span>
+                                        <span>Os Parças</span>
                                         <span>8:34 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Avisar para retirar o lixo</span>
+                                        <span>Os caba</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="chat-tile">
-                                <img decoding="async" src="./src/assets/neymar.jpg" alt="" class="chat-tile-avatar">
+                                <img decoding="async" src="./src/assets/neymar.jpg" alt="Imagem de Pefil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
                                         <span>Neymar</span>
                                         <span>23:30 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Neymar: Próxima copa é minha</span>
+                                        <span>Próxima copa é minha</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="chat-tile">
-                                <img decoding="async" src="./src/assets/vinicius.jpg" alt="" class="chat-tile-avatar">
+                                <img decoding="async" src="./src/assets/vinicius.jpg" alt="Imagem de Pefil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
                                         <span>Vini Malvadeza</span>
                                         <span>08:34 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Vini:Aquela bola de ouro era minha!</span>
+                                        <span>Aquela bola de ouro era minha!</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="chat-tile">
-                                <img decoding="async" src="./src/assets/belligol.jpg" alt="" class="chat-tile-avatar">
+                                <img decoding="async" src="./src/assets/belligol.jpg" alt="Imagem de Pefil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
                                         <span>Belligol</span>
                                         <span>10:34 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Belligol: Sou Iluminado!</span>
+                                        <span>Sou Iluminado!</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="chat-tile">
-                                <img decoding="async" src="./src/assets/Cristiano-Ronaldo.jpg" alt=""
-                                    class="chat-tile-avatar">
+                                <img decoding="async" src="./src/assets/Cristiano-Ronaldo.jpg" alt="Imagem de Perfil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
                                         <span>Cristiano Ronaldo</span>
                                         <span>11:00 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Papai Cris: Sou lindo!</span>
+                                        <span>Sou lindo!</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="chat-tile">
-                                <img decoding="async" src="./src/assets/lebron-james.png" alt=""
-                                    class="chat-tile-avatar">
+                                <img decoding="async" src="./src/assets/lebron-james.png" alt="Imagem de Pefil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
                                         <span>Lebron James</span>
                                         <span>12:34 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Lebron: Eu sou gostoso deeeeeemaaaais</span>
+                                        <span>Eu sou gostoso deeeeeemaaaais</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="chat-tile">
-                                <img decoding="async" src="./src/assets/curry.jpg" alt="" class="chat-tile-avatar">
+                                <img decoding="async" src="./src/assets/curry.jpg" alt="Imagem de Pefil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
                                         <span>Steph Curry</span>
                                         <span>11:34 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Chef: Sou o brinquedinho assassino, a jararaca</span>
+                                        <span>Sou o brinquedinho assassino, a jararaca</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="chat-tile">
-                                <img decoding="async" src="./src/assets/kylian-mbappe.jpg" alt=""
-                                    class="chat-tile-avatar">
+                                <img decoding="async" src="./src/assets/kylian-mbappe.jpg" alt="Imagem de Pefil">
                                 <div class="chat-tile-details">
                                     <div class="chat-tile-title">
                                         <span>Mbappe</span>
                                         <span>02:34 PM</span>
                                     </div>
                                     <div class="chat-title-subtitle">
-                                        <span>Tartaruga: Ela vai subir, ela vai descer...</span>
+                                        <span>Ela vai subir, ela vai descer...</span>
                                     </div>
                                 </div>
                             </div>
@@ -140,69 +136,69 @@
 
 
                 <section id="chat-window">
-                    <header id="chat-window-header">
-                        <img decoding="async" src="https://picsum.photos/id/103/50" alt="" class="avatar"
+                    <header class="chat-window-header">
+                        <img decoding="async" src="https://picsum.photos/id/103/50" alt="Imagem de Pefil" class="avatar"
                             id="profile-image">
-                        <div id="active-chat-details">
+                        <div class="active-chat-details">
                             <h3>Os Parças</h3>
-                            <div class="info">Você e outras 4 pessoas</div>
+                            <span>Você e outras 4 pessoas</span>
                         </div>
                         <div class="toolbar">
-                            <img src="./src/assets/do-utilizador.png" alt="">
-                            <img src="./src/assets/comentario-alt.png" alt="">
-                            <img src="./src/assets/definicoes.png" style="width: 16px;" alt="">
+                            <img src="./src/assets/do-utilizador.png" alt="Icone de Perfil">
+                            <img src="./src/assets/comentario-alt.png" alt="Icone de Mensagens">
+                            <img src="./src/assets/definicoes.png" style="width: 18px;" alt="Icone Configurações">
                         </div>
                     </header>
 
-                    <div id="chat-window-contents">
+                    <div class="chat-window-contents">
                         <div class="chat-message-group">
-                            <img decoding="async" src="https://picsum.photos/50" alt="" class="chat-message-avatar">
-                            <div class="chat-messages">
-                                <div class="chat-message-container">
-                                    <div class="chat-message chat-message-first">
-                                        <div class="chat-message-sender">Guts</div>
-                                        Eai, comos vocês tão?
-                                        <span class="chat-message-time">7:22 am</span>
-                                    </div>
-                                </div>
-                                <div class="chat-message">
-                                    Fazendo alguma coisa?
-                                    <span class="chat-message-time">7:22 am</span>
-                                </div>
-                                <div class="chat-message">
-                                    Estou indo para a praia!
-                                    <span class="chat-message-time">7:23 am</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="chat-message-group">
-                            <img decoding="async" src="https://picsum.photos/id/102/50" alt=""
+                            <img decoding="async" src="https://picsum.photos/50" alt="Imagem de Pefil"
                                 class="chat-message-avatar">
                             <div class="chat-messages">
                                 <div class="chat-message-container">
-                                    <div class="chat-message chat-message-first">
-                                        <div class="chat-message-sender">Kaisel</div>
-                                        Muito bom!
-                                        <span class="chat-message-time">7:30 am</span>
+                                    <div class="chat-message ">
+                                        <div class="chat-message-sender">Guts</div>
+                                        Eai, comos vocês tão?
+                                        <span>7:22 am</span>
                                     </div>
-                                </div>
-                                <div class="chat-message">
-                                    Quando estiver livre, vou para a praia tambem.
-                                    <span class="chat-message-time">7:30 am</span>
+                                    <div class="chat-message">
+                                        Fazendo alguma coisa?
+                                        <span>7:22 am</span>
+                                    </div>
+                                    <div class="chat-message">
+                                        Estou indo para a praia!
+                                        <span>7:23 am</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
+                        <div class="chat-message-group">
+                            <img decoding="async" src="https://picsum.photos/id/102/50" alt="Imagem de Pefil"
+                                class="chat-message-avatar">
+                            <div class="chat-messages">
+                                <div class="chat-message-container">
+                                    <div class="chat-message">
+                                        <div class="chat-message-sender">Kaisel</div>
+                                        Muito bom!
+                                        <span>7:30 am</span>
+                                    </div>
 
+                                    <div class="chat-message">
+                                        Quando estiver livre, vou para a praia tambem.
+                                        <span>7:30 am</span>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
                     <footer id="chat-window-footer">
                         <input type="text" class="message-text-footer" placeholder="Digite sua Mensagem">
                         <img decoding="async" src="./src/assets/message.png" alt="" class="icon">
                     </footer>
                 </section>
-
-
 
             </div>
         </main>
